// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum CylinderStatus {
  IN_STOCK
  ASSIGNED
  MAINTENANCE
  RETIRED
}

enum TransactionType {
  ISSUE
  RETURN
  MAINTENANCE
  INSPECTION
}

enum ExpenseCategory {
  HOME
  OTHER
}

enum BillStatus {
  PAID
  PARTIALLY_PAID
  NOT_PAID
}

enum PaymentEventType {
  BILL_GENERATED
  BILL_UPDATED
  BILL_DELETED
  PAYMENT_RECEIVED
  PARTIAL_PAYMENT
  INVOICE_GENERATED
  INVOICE_DOWNLOADED
  INVOICE_DELETED
}

enum UserRole {
  SUPER_ADMIN
  ADMIN
  STAFF
  VIEWER
  BRANCH_MANAGER
}

enum UserStatus {
  ACTIVE
  SUSPENDED
  PENDING
}

model InventoryItem {
  id           String   @id @default(cuid())
  cylinderType String
  category     String   @default("General")
  quantity     Int
  unitPrice    Float? // Price of one cylinder
  vendor       String
  receivedBy   String
  description  String?
  verified     Boolean  @default(false)
  entryDate    DateTime
  createdAt    DateTime @default(now())

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([entryDate])
  @@index([category])
}

model User {
  id                   String     @id @default(cuid())
  name                 String
  email                String     @unique
  phone                String?
  role                 UserRole   @default(ADMIN)
  status               UserStatus @default(PENDING)
  isVerified           Boolean    @default(false)
  username             String?    @unique
  department           String?
  branch               String?
  profileImage         String?
  companyDescription   String?
  streetAddress        String?
  city                 String?
  stateProvince        String?
  country              String?
  passwordHash         String?
  businessName         String?
  billTemplateDesign   Json?
  billPresets          Json?
  reportTemplateDesign Json?
  reportPresets        Json?
  themePreferences     Json?
  logoCustomUpload     String?
  fontPreferences      Json?
  permissions          Json?
  lastLogin            DateTime?
  createdAt            DateTime   @default(now())
  updatedAt            DateTime   @updatedAt

  // Multi-tenant: adminId points to the Admin (tenant owner) this user belongs to
  // For ADMIN users: adminId = id (self-reference, they own their tenant)
  // For STAFF/VIEWER/BRANCH_MANAGER: adminId = their Admin's id
  // For SUPER_ADMIN: adminId = null (no tenant, system-level)
  adminId     String?
  admin       User?   @relation("TenantOwner", fields: [adminId], references: [id], onDelete: Cascade)
  tenantUsers User[]  @relation("TenantOwner")

  transactions      CylinderTransaction[]  @relation("TransactionUser")
  adminTransactions CylinderTransaction[]  @relation("TransactionAdmin")
  activityLogs      ActivityLog[]
  generatedInvoices Invoice[]             @relation("InvoiceGeneratedBy") // Invoices generated by this user

  // Tenant-scoped data (as Admin)
  customers       Customer[]
  cylinders       Cylinder[]
  bills           Bill[]
  payments        Payment[]
  cylinderEntries CylinderEntry[]
  expenses        Expense[]
  inventoryItems  InventoryItem[]
  paymentLogs     PaymentLog[]
  dailyNotes      DailyNote[]
  backups         Backup[]
  restores        Restore[]
  systemSettings  SystemSettings[]
  adminInvoices   Invoice[]        @relation("InvoiceAdmin") // Invoices owned by this tenant (via adminId)

  @@index([adminId])
}

model Customer {
  id                 String   @id @default(cuid())
  customerCode       Int      @default(autoincrement())
  name               String
  contactNumber      String
  email              String?
  customerType       String
  cylinderType       String
  billType           String
  securityDeposit    Int?
  area               String?
  city               String?
  country            String?
  notes              String?
  additionalContacts Json?
  status             String   @default("ACTIVE")
  address            String?
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  cylinders    Cylinder[]
  transactions CylinderTransaction[]
  bills        Bill[]
  invoices     Invoice[]

  @@unique([adminId, customerCode]) // customerCode is unique per tenant
  @@unique([adminId, email]) // email is unique per tenant (if provided)
  @@index([adminId])
  @@index([customerCode]) // Frequently searched by customer code
  @@index([status]) // Frequently filtered by status
  @@index([name]) // Frequently searched by name
}

model Cylinder {
  id             String         @id @default(cuid())
  serialNumber   String
  gasType        String
  capacityLiters Int
  status         CylinderStatus @default(IN_STOCK)
  location       String
  pressurePsi    Float?
  lastInspection DateTime?
  nextInspection DateTime?
  notes          String?
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  customerId String?
  customer   Customer? @relation(fields: [customerId], references: [id])

  transactions CylinderTransaction[]

  @@unique([adminId, serialNumber]) // serialNumber is unique per tenant
  @@index([adminId])
  @@index([status]) // Frequently filtered by status
  @@index([customerId]) // Frequently joined with customers
  @@index([createdAt]) // Frequently sorted by creation date
}

model CylinderTransaction {
  id         String          @id @default(cuid())
  cylinderId String
  cylinder   Cylinder        @relation(fields: [cylinderId], references: [id])
  customerId String?
  customer   Customer?       @relation(fields: [customerId], references: [id])
  userId     String?
  user       User?           @relation("TransactionUser", fields: [userId], references: [id])
  type       TransactionType
  quantity   Int             @default(1)
  recordedAt DateTime        @default(now())
  dueDate    DateTime?
  notes      String?
  createdAt  DateTime        @default(now())

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation("TransactionAdmin", fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([recordedAt]) // Frequently filtered and sorted by date
  @@index([type]) // Frequently filtered by transaction type
  @@index([customerId]) // Frequently joined with customers
  @@index([cylinderId]) // Frequently joined with cylinders
}

model Otp {
  id         String    @id @default(cuid())
  email      String
  code       String
  expiresAt  DateTime
  verifiedAt DateTime?
  createdAt  DateTime  @default(now())

  @@index([email])
  @@index([expiresAt])
}

model CylinderEntry {
  id                    String   @id @default(cuid())
  billCreatedBy         String
  cylinderType          String
  cylinderLabel         String?
  deliveredBy           String?
  unitPrice             Int      @default(0)
  quantity              Int      @default(1)
  amount                Int
  customerName          String
  customerId            String?
  verified              Boolean  @default(false)
  description           String?
  deliveryDate          DateTime @default(now())
  createdAt             DateTime @default(now())
  // RECEIVED type fields
  paymentType           String?
  paymentAmount         Int?
  paymentReceivedBy     String?
  emptyCylinderReceived Int?

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([deliveryDate])
}

model Expense {
  id          String          @id @default(cuid())
  expenseType String
  amount      Int
  category    ExpenseCategory @default(HOME)
  expenseDate DateTime
  description String?
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([expenseDate])
  @@index([category])
}

model Bill {
  id                 String     @id @default(cuid())
  customerId         String
  customer           Customer   @relation(fields: [customerId], references: [id], onDelete: Cascade)
  billStartDate      DateTime
  billEndDate        DateTime
  lastMonthRemaining Int        @default(0)
  currentMonthBill   Int        @default(0)
  cylinders          Int        @default(0)
  status             BillStatus @default(NOT_PAID)
  createdAt          DateTime   @default(now())
  updatedAt          DateTime   @updatedAt

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  payments Payment[]
  invoice  Invoice?

  @@unique([adminId, customerId, billStartDate, billEndDate]) // Unique per tenant
  @@index([adminId])
  @@index([billStartDate, billEndDate])
  @@index([status])
}

model Payment {
  id        String   @id @default(cuid())
  billId    String
  bill      Bill     @relation(fields: [billId], references: [id], onDelete: Cascade)
  amount    Int
  paidOn    DateTime @default(now())
  method    String?  @default("bank_transfer")
  notes     String?
  createdAt DateTime @default(now())

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([paidOn])
}

model PaymentLog {
  id            String           @id @default(cuid())
  billId        String?
  paymentId     String?
  customerName  String
  customerCode  Int?
  eventType     PaymentEventType
  amount        Int?
  details       String?
  billStartDate DateTime?
  billEndDate   DateTime?
  performedAt   DateTime         @default(now())
  createdAt     DateTime         @default(now())

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([performedAt])
  @@index([eventType])
  @@index([customerCode])
}

model DailyNote {
  id             String   @id @default(cuid())
  noteDate       DateTime
  noteText       String   @default("")
  sections       Json
  labels         String[]
  characterCount Int      @default(0)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@unique([adminId, noteDate]) // noteDate is unique per tenant
  @@index([adminId])
}

model Backup {
  id          String   @id @default(cuid())
  fileName    String
  fileSize    Int?
  backupDate  DateTime @default(now())
  isAutomatic Boolean  @default(false)
  createdAt   DateTime @default(now())

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([backupDate])
}

model SystemSettings {
  id        String   @id @default(cuid())
  key       String
  value     String
  updatedAt DateTime @updatedAt

  // Multi-tenant: belongs to an Admin (tenant owner)
  // For global settings, adminId can be null (Super Admin only)
  adminId String?
  admin   User?   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@unique([adminId, key]) // key is unique per tenant (or global if adminId is null)
  @@index([adminId])
  @@index([key])
}

model Restore {
  id          String   @id @default(cuid())
  fileName    String
  restoreDate DateTime @default(now())
  createdAt   DateTime @default(now())

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation(fields: [adminId], references: [id], onDelete: Cascade)

  @@index([adminId])
  @@index([restoreDate])
}

model ActivityLog {
  id        String   @id @default(cuid())
  userId    String?
  user      User?    @relation(fields: [userId], references: [id])
  action    String
  module    String?
  details   String?
  ipAddress String?
  userAgent String?
  createdAt DateTime @default(now())

  @@index([userId])
  @@index([module])
  @@index([createdAt])
}

model SuperAdminAccessCode {
  id        String   @id @default(cuid())
  code      String   @unique
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([code])
}

model Invoice {
  id            String   @id @default(cuid())
  invoiceNumber String   @unique
  billId        String   @unique
  customerId    String
  pdfUrl        String
  generatedAt   DateTime @default(now())
  generatedById String

  // Multi-tenant: belongs to an Admin (tenant owner)
  adminId String
  admin   User   @relation("InvoiceAdmin", fields: [adminId], references: [id], onDelete: Cascade)

  bill        Bill     @relation(fields: [billId], references: [id], onDelete: Cascade)
  customer    Customer @relation(fields: [customerId], references: [id])
  generatedBy User     @relation("InvoiceGeneratedBy", fields: [generatedById], references: [id])

  @@index([adminId])
  @@index([customerId])
  @@index([billId])
  @@index([invoiceNumber])
}
